Updated Tommy's Git level

--- a/css/generalmedia.css
+++ b/css/generalmedia.css
@@ -13,6 +13,8 @@ a:active {
 }
 /* End link behavior */
 
+/* Tommy is Gitmaster */
+
 /* Applies font choices to everything */
 * {
 	/* font-family: Verdana, Geneva, sans-serif */;
